frontend module work & rework tplBasic

--- a/plugins/tplBasic/README
+++ b/plugins/tplBasic/README
@@ -1,1 +1,2 @@
-this plugin provided template support, is responsable of build the final web
+this plugin provided template support, not really template system just a logic separator.
+
