--- a/TODO
+++ b/TODO
@@ -3,9 +3,11 @@ de la dependencia no habilitada.
 
 * Admin actualmente instala ACL si ACL esta activo, al instalar no esta activo y no hay opcion para instalar las opciones admin ACL
 que necesitan la tabla permissions
- - Solucion 1 dar opcion para habilitar ACL en el plugin si el ACL esta activo despues y luego dar opcion para insertar lo necesario
- - Solucion 2, utilizar un register para permisos y no utilizar database.
-
+ - Solucion 1 despues de iniciado dar opcion para habilitar ACL en el plugin si el ACL esta activo despues y luego dar opcion para insertar lo necesario
+ - Solucion 2, utilizar un register para permisos y no utilizar database. O mezcla de ambos, dar opcion a algunos plugins a registar los permisos y si ACL esta activado
+    en vez registarlos añadirlos a la DB
+ - Solucion 3, en la instalacion presentar opcion para activar el ACL y activarlo antes (problema:probablemente necesitara tambien la S1 si se quiere poder activar despues),
+   (problema: ACL tambien necesita groups)
 * Añadir config por grupos para luego presentarlos por grupos, ej: L_NEWS_SUBMIT, L_NEWS_VIEW
 
 *
