--- a/TODO
+++ b/TODO
@@ -10,4 +10,6 @@ que necesitan la tabla permissions
    (problema: ACL tambien necesita groups)
 * Añadir config por grupos para luego presentarlos por grupos, ej: L_NEWS_SUBMIT, L_NEWS_VIEW
 
-*
+* Añadir realname
+   - Usar nombre real o usuario para noticias? seria caos
+   - Lo mejor seria pasar del nombre de usuario y permitir nombres reales 
