fix blocks depends to opt, and express start blocks on init Frontend (admin/normal)

--- a/TODO
+++ b/TODO
@@ -21,3 +21,5 @@ para luego presentarlos por grupos, ej: L_NEWS_SUBMIT, L_NEWS_VIEW
 * CRON Plugin y calcular opcionalmente ratio de user global "todas las section"
 
 * Añadir opcion para que el usuario decida el formato de fecha
+
+* Añadir imagenes categoria
