--- a/TODO
+++ b/TODO
@@ -2,9 +2,6 @@ HIGH
 
 MED
 
-* CORE/INSTALL/PLUGINS: Cuando se instalan plugins comprobar que sus dependencias estan cumplidas, si no al instalar por ejemplo NewsComments y no estar instalado News, no puede modificar la tabla.
-* CORE/plugins: Cuando habilitas un plugin o autostart debiria comprobar y activar si se cumplen las dependencias o avisar 
-de la dependencia no habilitada.
 * ADMIN: Admin actualmente instala ACL si ACL esta activo, al instalar no esta activo y no hay opcion para instalar las opciones admin ACL
 que necesitan la tabla permissions
  - Solucion 1 despues de iniciado dar opcion para habilitar ACL en el plugin si el ACL esta activo despues y luego dar opcion para insertar lo necesario
@@ -22,7 +19,7 @@ LOW
 * CORE: Config por grupos (añadidada la tambla pero sin usar) ver como agrupar y mostrar agrupados en admin
 para luego presentarlos por grupos, ej: L_NEWS_SUBMIT, L_NEWS_VIEW
 
-* SMBASIC: Comprobar que funciene el crear una cuenta con un nombre real con espacios
+* SMBASIC: Comprobar que funcione el crear una cuenta con un nombre real con espacios
 
 * NewsComments: Añadir opcion en la admin bar para desabilitar comentarios de determinada noticia, accesible a admins y si $cfg lo permitiera a usuarios.
 
