--- a/TODO
+++ b/TODO
@@ -15,6 +15,8 @@ que necesitan la tabla permissions
 
 LOW
 
+* filter strict chars , permitir configurar que caracteres permite
+
 * CORE: Config por grupos (añadidada la tambla pero sin usar) ver como agrupar y mostrar agrupados en admin
 para luego presentarlos por grupos, ej: L_NEWS_SUBMIT, L_NEWS_VIEW
 
