--- a/TODO
+++ b/TODO
@@ -15,5 +15,6 @@ para luego presentarlos por grupos, ej: L_NEWS_SUBMIT, L_NEWS_VIEW
 * CRON?: CRON Plugin y calcular opcionalmente ratio de user global "todas las section"
 * SMBasic?: Añadir opcion para que el usuario decida el formato de fecha
 * News: Si una noticia esta traducida mostrar opcion para que el usuario pueda cambiar de lenguaje
+* News: Subscrition access
 * FRONTEND? : Mostrar fecha y hora actual
 
