--- a/TODO
+++ b/TODO
@@ -7,10 +7,9 @@ MED
 * GROUPS : Opcion para añador automaticamente usuarios a los grupos por defecto (isFounder = ADMIN GRUPOS) (isAdmin = ADMIN_GROUPS)  (resto Usuarios registrados)
 * Plugins - Hacer funcion para obtener version del plugin instalado
 * Rating opcion de calcular en carga o mostrar total pre-calculado via cron
-* go back rework: 
-<button onclick="history.go(-1);">Back </button>
-<a href="<?php echo $_SERVER['HTTP_REFERER'] ?>">Back</a>
-
+* Admin no puede añadir una pagina nueva a una noticia de otro usuario
+* Comprobar si se puede limitar "limit 1" a news_featured  y demas o necesita sin limitar por el numero de paginas
+* Comprobar en general si se puede mejorar news_feaured y demás en news_view.php
 LOW
 
 * filter strict chars , permitir configurar que caracteres permite
