few minor changes and fixes, editor improve, "', fix terms page, change longtet to text in news

--- a/TODO
+++ b/TODO
@@ -6,11 +6,17 @@ MED
 * GoogleAnalytics, menu admin para cambiar el codigo de usuario
 LOW
 
+* Minieditor: Capturar tabs
+* News: despues de borrar una noticia va al referer no deberia por que no existe.
+* News: Edit time
+* Categorias: no se puede eliminar el enlace de imagen categorias dejandolo vacio.
+https://stackoverflow.com/questions/6637341/use-tab-to-indent-in-textarea
 * Bloques: poder cambiar idioma, prioridad y demas
 * Smbasic admin: añadir usuario manualmente.
 * Smbasic admin: añadir admin y founder
 * Smbasic: crear email html, quizas optativo plain/html por configuracion.
 * SimpleCategories: cuando insertas unas url/img no valida o que no existe no presenta mensaje de error
+* SimpleCategories: Opcion en creacion de categorias de poner el modulo.
 * DebugWindows: que solo aparezca con admin logged
 * filter strict chars , permitir configurar que caracteres permite
 * CORE: Config por grupos (añadidada la tambla pero sin usar) ver como agrupar y mostrar agrupados en admin
