--- a/TODO
+++ b/TODO
@@ -2,13 +2,8 @@ HIGH
 
 MED
 * NewsMediaUpload - Forma de borrar imagenes subidas
-* Newsmediaupload - Sobre la imagen mostrar nombre
-* Editor: cuando pinchas en una imagen que tenga en cuenta el cursor ahora la pone al final
-* clear css cache
-* GoogleAnalytics, menu admin para cambiar el codigo de usuario
 LOW
-
-* Minieditor: Capturar tabs
+* Minieditor: Capturar tabulaciones
 * Categorias: no se puede eliminar el enlace de imagen categorias dejandolo vacio.
 https://stackoverflow.com/questions/6637341/use-tab-to-indent-in-textarea
 * Bloques: poder cambiar idioma, prioridad y demas
@@ -16,7 +11,7 @@ https://stackoverflow.com/questions/6637341/use-tab-to-indent-in-textarea
 * Smbasic admin: añadir admin y founder
 * Smbasic: crear email html, quizas optativo plain/html por configuracion.
 * SimpleCategories: cuando insertas unas url/img no valida o que no existe no presenta mensaje de error
-* SimpleCategories: Opcion en creacion de categorias de poner el modulo.
+* SimpleCategories: Opcion en creacion de categorias de poner el modulo.?
 * DebugWindows: que solo aparezca con admin logged
 * filter strict chars , permitir configurar que caracteres permite
 * CORE: Config por grupos (añadidada la tambla pero sin usar) ver como agrupar y mostrar agrupados en admin
@@ -31,3 +26,7 @@ para luego presentarlos por grupos, ej: L_NEWS_SUBMIT, L_NEWS_VIEW
 * GROUPS : Opcion para añador automaticamente usuarios a los grupos por defecto (isFounder = ADMIN GRUPOS) (isAdmin = ADMIN_GROUPS)  (resto Usuarios registrados)
 * Plugins - Hacer funcion para obtener version del plugin instalado
 * Rating opcion de calcular en carga o mostrar total pre-calculado via cron
+* NewsMediaUpload, autoload upload images on scroll.
+* Newsmediaupload - Sobre la imagen mostrar nombre (tiene alt pero no funciona)
+* clear css cache
+* GoogleAnalytics, menu admin para cambiar el codigo de usuario
