--- a/TODO
+++ b/TODO
@@ -30,3 +30,4 @@ para luego presentarlos por grupos, ej: L_NEWS_SUBMIT, L_NEWS_VIEW
 * Newsmediaupload - Sobre la imagen mostrar nombre (tiene alt pero no funciona)
 * clear css cache
 * GoogleAnalytics, menu admin para cambiar el codigo de usuario
+* News: Moderacion de paginas, si hay varias a la espera y aprobamos una se aprueban el resto
