--- a/TODO
+++ b/TODO
@@ -14,10 +14,10 @@ https://stackoverflow.com/questions/6637341/use-tab-to-indent-in-textarea
 * Smbasic admin: añadir admin y founder
 * Smbasic: crear email html, quizas optativo plain/html por configuracion.
 * SimpleCategories: cuando insertas unas url/img no valida o que no existe no presenta mensaje de error
-* SimpleCategories: Opcion en creacion de categorias de poner el modulo.?
-* DebugWindows: que solo aparezca con admin logged
+* SimpleCategories: Opcion en creacion de categorias de poner el plugin.?
+* DebugWindows: rewrite? que solo aparezca con admin logged?, log to syslog?, 
 * filter strict chars , permitir configurar que caracteres permite
-* CORE: Config por grupos (añadidada la tambla pero sin usar) ver como agrupar y mostrar agrupados en admin
+* CORE: Config por grupos (añadidada la tabla pero sin usar) ver como agrupar y mostrar agrupados en admin
 para luego presentarlos por grupos, ej: L_NEWS_SUBMIT, L_NEWS_VIEW
 * CRON?: CRON Plugin y calcular opcionalmente ratio de user global "todas las section"
 * SMBasic?: Añadir opcion para que el usuario decida el formato de fecha
@@ -25,16 +25,14 @@ para luego presentarlos por grupos, ej: L_NEWS_SUBMIT, L_NEWS_VIEW
 * FRONTEND? : Mostrar fecha y hora actual
 * SimpleACL Ordenar permisos en solapas por plugins
 * SimpleGroups/ACL grupos heredados
-* GROUPS : Opcion para añador automaticamente usuarios a los grupos por defecto (isFounder = ADMIN GRUPOS) (isAdmin = ADMIN_GROUPS)  (resto Usuarios registrados)
-* Plugins - Hacer funcion para obtener version del plugin instalado
+* GROUPS : Opcion para añadir automaticamente usuarios a los grupos por defecto (isFounder = ADMIN GRUPOS) (isAdmin = ADMIN_GROUPS)  (resto Usuarios registrados)
+* Plugins - Hacer funcion para obtener version del plugin instalado ¿para que lo necesitaba?
 * Rating opcion de calcular en carga o mostrar total pre-calculado via cron
 * NewsMediaUpload, autoload upload images on scroll.
 * Newsmediaupload - Sobre la imagen mostrar nombre (tiene alt pero no funciona)
-* clear css cache
-* GoogleAnalytics, menu admin para cambiar el codigo de usuario
+* tpl Admin opción para limpiar el css cache
 * News: Moderacion de paginas, si hay varias a la espera y aprobamos una se aprueban el resto
 * News: Fix news_adv_stats
 * PersonalGist: Buscar manera de mostrar la pantallad de carga "loading" con la nueva web.
 * PersonalGist/GENERAL: ver como tratar las dependencias del sistema, por ejemplo curl en el caso de personalgist
 * Plugins:Al rescanear no actualiza bien, hay que recargar la pagina
-* News: En seccion no aparece la opcion de cambiar lenguage interface
