--- a/TODO
+++ b/TODO
@@ -36,3 +36,4 @@ para luego presentarlos por grupos, ej: L_NEWS_SUBMIT, L_NEWS_VIEW
 * PersonalGist: Buscar manera de mostrar la pantallad de carga "loading" con la nueva web.
 * PersonalGist/GENERAL: ver como tratar las dependencias del sistema, por ejemplo curl en el caso de personalgist
 * Plugins:Al rescanear no actualiza bien, hay que recargar la pagina
+* Frontend: funcion que muestre una pantalla de espera para tareas que tardan
