--- a/TODO
+++ b/TODO
@@ -37,3 +37,6 @@ para luego presentarlos por grupos, ej: L_NEWS_SUBMIT, L_NEWS_VIEW
 * PersonalGist/GENERAL: ver como tratar las dependencias del sistema, por ejemplo curl en el caso de personalgist
 * Plugins:Al rescanear no actualiza bien, hay que recargar la pagina
 * Frontend: funcion que muestre una pantalla de espera para tareas que tardan
+* News: Guardar como borrador
+* NewsMedia: subir imagenes arrastrando.
+* NewsSearch, al pulsar boton vacio desviar a una pagina de busquedas.
