--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 HIGH
 
 MED
+* News: Guardar como borrador, y menu consultar borradores
 * Modulo Curriculum
 * NewsMediaUpload - Forma de borrar imagenes subidas
 * tplBasic/frontend - buscar forma de poder ordenar por prioridad los elementos del menu, donde esta categorias, git,etc
@@ -16,7 +17,6 @@ https://stackoverflow.com/questions/6637341/use-tab-to-indent-in-textarea
 * Smbasic: crear email html, quizas optativo plain/html por configuracion.
 * SimpleCategories: cuando insertas unas url/img no valida o que no existe no presenta mensaje de error
 * SimpleCategories: Opcion en creacion de categorias de poner el plugin.?
-* Debug log to syslog?, 
 * filter strict chars , permitir configurar que caracteres permite
 * CORE: Config por grupos (añadidada la tabla pero sin usar) ver como agrupar y mostrar agrupados en admin
 para luego presentarlos por grupos, ej: L_NEWS_SUBMIT, L_NEWS_VIEW
@@ -28,7 +28,7 @@ para luego presentarlos por grupos, ej: L_NEWS_SUBMIT, L_NEWS_VIEW
 * SimpleGroups/ACL grupos heredados
 * GROUPS : Opcion para añadir automaticamente usuarios a los grupos por defecto (isFounder = ADMIN GRUPOS) (isAdmin = ADMIN_GROUPS)  (resto Usuarios registrados)
 * Plugins - Hacer funcion para obtener version del plugin instalado ¿para que lo necesitaba?
-* Rating opcion de calcular en carga o mostrar total pre-calculado via cron
+* Rating opcion de calcular en el momento o mostrar total pre-calculado via cron y recalcular via cron
 * NewsMediaUpload, autoload upload images on scroll.
 * Newsmediaupload - Sobre la imagen mostrar nombre (tiene alt pero no funciona)
 * News: Moderacion de paginas, si hay varias a la espera y aprobamos una se aprueban el resto
@@ -37,7 +37,8 @@ para luego presentarlos por grupos, ej: L_NEWS_SUBMIT, L_NEWS_VIEW
 * PersonalGist/GENERAL: ver como tratar las dependencias del sistema, por ejemplo curl en el caso de personalgist
 * Plugins:Al rescanear no actualiza bien, hay que recargar la pagina
 * Frontend: funcion que muestre una pantalla de espera para tareas que tardan
-* News: Guardar como borrador
 * NewsMedia: subir imagenes arrastrando.
-* NewsSearch, al pulsar boton vacio desviar a una pagina de busquedas.
+
+Más tarde si eso...:
+* Debug log to syslog?, 
 * Private Mensaje system
