--- a/TODO
+++ b/TODO
@@ -4,40 +4,38 @@ MED
 * News: Guardar como borrador, y menu consultar borradores
 * Modulo Curriculum
 * NewsMediaUpload - Forma de borrar imagenes subidas
-* tplBasic/frontend - buscar forma de poder ordenar por prioridad los elementos del menu, donde esta categorias, git,etc
 * tplBasic addScriptFile, cambiar la forma de especificar async
 LOW
-* Minieditor: Capturar tabulaciones
+* Minieditor: Capturar tabulaciones https://stackoverflow.com/questions/6637341/use-tab-to-indent-in-textarea
 * Categorias: no se puede eliminar el enlace de imagen categorias dejandolo vacio.
-https://stackoverflow.com/questions/6637341/use-tab-to-indent-in-textarea
 * Bloques: poder cambiar idioma, prioridad y demas
-* Smbasic admin: añadir usuario manualmente.
-* Smbasic admin: añadir admin y founder
-* Smbasic: crear email html, quizas optativo plain/html por configuracion.
+* Smbasic admin: poder añadir usuario manualmente.
+* Smbasic admin: poder añadir admin y founder
 * SimpleCategories: cuando insertas unas url/img no valida o que no existe no presenta mensaje de error
 * SimpleCategories: Opcion en creacion de categorias de poner el plugin.?
+* SMBasic?: Añadir opcion para que el usuario decida el formato de fecha
+* FRONTEND? : Mostrar fecha y hora actual
+* Plugins - Hacer funcion para obtener version del plugin instalado ¿para que lo necesitaba?
+* Rating opcion de calcular en el momento o mostrar total pre-calculado via cron y recalcular via cron
+* News: Moderacion de paginas, si hay varias a la espera y aprobamos una se aprueban el resto
+* Plugins:Al rescanear no actualiza bien, hay que recargar la pagina
+
+Más tarde si eso... o backlog:
+* Frontend: funcion que muestre una pantalla de espera para tareas que tardan
+* NewsMedia: subir imagenes arrastrando.
+* Debug log to syslog?, 
+* Private Mensaje system
+* Smbasic: crear email html, quizas optativo plain/html por configuracion.
 * filter strict chars , permitir configurar que caracteres permite
 * CORE: Config por grupos (añadidada la tabla pero sin usar) ver como agrupar y mostrar agrupados en admin
 para luego presentarlos por grupos, ej: L_NEWS_SUBMIT, L_NEWS_VIEW
 * CRON?: CRON Plugin y calcular opcionalmente ratio de user global "todas las section"
-* SMBasic?: Añadir opcion para que el usuario decida el formato de fecha
 * News: Subscrition access
-* FRONTEND? : Mostrar fecha y hora actual
 * SimpleACL Ordenar permisos en solapas por plugins
-* SimpleGroups/ACL grupos heredados
 * GROUPS : Opcion para añadir automaticamente usuarios a los grupos por defecto (isFounder = ADMIN GRUPOS) (isAdmin = ADMIN_GROUPS)  (resto Usuarios registrados)
-* Plugins - Hacer funcion para obtener version del plugin instalado ¿para que lo necesitaba?
-* Rating opcion de calcular en el momento o mostrar total pre-calculado via cron y recalcular via cron
+* SimpleGroups/ACL grupos heredados
 * NewsMediaUpload, autoload upload images on scroll.
 * Newsmediaupload - Sobre la imagen mostrar nombre (tiene alt pero no funciona)
-* News: Moderacion de paginas, si hay varias a la espera y aprobamos una se aprueban el resto
 * News: Fix news_adv_stats
 * PersonalGist: Buscar manera de mostrar la pantallad de carga "loading" con la nueva web.
 * PersonalGist/GENERAL: ver como tratar las dependencias del sistema, por ejemplo curl en el caso de personalgist
-* Plugins:Al rescanear no actualiza bien, hay que recargar la pagina
-* Frontend: funcion que muestre una pantalla de espera para tareas que tardan
-* NewsMedia: subir imagenes arrastrando.
-
-Más tarde si eso...:
-* Debug log to syslog?, 
-* Private Mensaje system
