fix post new install  errors

--- a/TODO
+++ b/TODO
@@ -24,6 +24,8 @@ LOW
 * CORE: separar lang variables de admin del resto y cargarlos cuando se entra en administración.
 * GROUPS : Opcion para añadir automaticamente usuarios a los grupos por defecto (isFounder = ADMIN GRUPOS) (isAdmin = ADMIN_GROUPS)  (resto Usuarios registrados)
   En install instalar permisos basicos para cada grupo standard
+* Al crear un bloque, ponemos idioma, ponemos tipo de bloque y el idioma se resetea, posiblemente todo se resetea, mantener.
+
 
 Más tarde si eso... o backlog:
 * Frontend: funcion que muestre una pantalla de espera para tareas que tardan
