--- a/TODO
+++ b/TODO
@@ -4,10 +4,9 @@ MED
 * NewsMedia: subir imagenes arrastrando.
 * editor tag advertencia letras con fondo rojo.
 * La entradilla en bloques muestra \n\r
-TODO: Permitir varios relacionadas a la vez
-TOO: Newsupload: poder hacer reload de imagenes
-TODO: Relacionadas, permitir caption en links utilizando extra
-TODO: al menos en edicion y newsview necesita un expressStart("NewsSearch") por el tema de tags
+* Newsupload:  hacer reload despues de subir imagenes, que no haya necesidad de recargar la pagina, es el editor y se pierden los datos.
+* al menos en edicion y newsview necesita un expressStart("NewsSearch") por el tema de tags
+* no permitir reload en el editor
 LOW
 
 * Minieditor: Capturar tabulaciones, https://stackoverflow.com/questions/6637341/use-tab-to-indent-in-textarea
@@ -30,6 +29,8 @@ LOW
   En install instalar permisos basicos para cada grupo standard
 * Al crear un bloque, ponemos idioma, ponemos tipo de bloque y el idioma se resetea, posiblemente todo se resetea, mantener.
 * Bloque news opcionalmente uno para mostrar borradores de usuario, solo visible por el si tiene.
+* Permitir varios relacionadas a la vez y cambiar el codigo al respecto que es malo no lo siguiente.
+* editor: el tab deberia de saltarse los botones entre lead y texto.
 
 Más tarde si eso... o backlog:
 * Frontend: funcion que muestre una pantalla de espera para tareas que tardan
