--- a/TODO
+++ b/TODO
@@ -1,7 +1,7 @@
 HIGH
 
 MED
-* NewsMediaUpload - Forma de borrar imagenes subidas
+* NewsMediaUpload - Forma de poder borrar imagenes subidas
 LOW
 
 * Minieditor: Capturar tabulaciones, https://stackoverflow.com/questions/6637341/use-tab-to-indent-in-textarea
