--- a/TODO
+++ b/TODO
@@ -46,4 +46,4 @@ para luego presentarlos por grupos, ej: L_NEWS_SUBMIT, L_NEWS_VIEW
   (Tendria que añadir un campo extra en categorias )
 * Añadir <p> automaticamente en parrafos sin p
   (dificil)
-* Añadir en config 'desc'ripcion, para ello lo tal antes seria separar los lang files de admin del resto
+* Quizas Añadir en config descripcion, para ello lo tal antes seria separar los lang files de admin del resto
