fix comment not close div (temporaly fix)

--- a/TODO
+++ b/TODO
@@ -5,6 +5,7 @@ MED
   Actualmente hay en SMBasic dropdown.js y un toggleMenu inline (para el menu dropdown), hacer un standard que incruste a petición frontend 
     y poder llamar con algo como 'toogleDisplay("id");
 * ¿mostrar breadcrum en section?
+* el detector de primera imagen al menos en el bloque no detecta [localimg] si no solamente [localimg w=XXX]
 LOW
 * News: el pager actualmente muestra el numero de pagina si es un borrador
 * Minieditor: Capturar tabulaciones, https://stackoverflow.com/questions/6637341/use-tab-to-indent-in-textarea
