--- a/TODO
+++ b/TODO
@@ -7,7 +7,8 @@ MED
 * ¿mostrar breadcrum en section?
 * el detector de primera imagen al menos en el bloque no detecta [localimg] si no solamente [localimg w=XXX]
 * editor: table responsive
-
+* WEB_URL, STATIC_URL y posiblemente algunas más despues de la instalacion inicial son ignorados los cambios en el config.inc, advertirlo
+  o cambiar los valores iniciales para que no sean modificables en la BD y solo puedan ser modificados en el config.inc.
 LOW
 * News: el pager actualmente muestra el numero de pagina si es un borrador
 * Minieditor: Capturar tabulaciones, https://stackoverflow.com/questions/6637341/use-tab-to-indent-in-textarea
