--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 HIGH
-
+* SimpleFrontend,comprobar bien que blocks es opcional y añadir alternativa para que un plugin provea un index 
 MED
 * NewsMediaUpload - Añadir field owner_id/uid Forma de poder borrar imagenes subidas
   Actualmente hay en SMBasic dropdown.js y un toggleMenu inline (para el menu dropdown), hacer un standard que incruste a petición frontend 
